fixed a spacing issue on home page

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body.home{
 
 .home nav ul {
 	padding: 20px 10px;
+	padding-bottom: 0;
 	height: 30px;
 	text-align: center;
 	background: #FF7849;
